# rust-test

./: Cargo.toml  README.md  how <commit hash>
pallets/poe/: Cargo.toml
pallets/poe/src/: lib.rs
runtime/src/: lib.rs
src/: area.rs  lib.rs  main.rs
