[package]
name = "Traffictest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "my-traffic"
path = "src/Traffic.rs"

[[bin]]
name = "my-option"
path = "src/option.rs"

[[bin]]
name = "my-area"
path= "src/area.rs"